# Synthesize-Instructions

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
